welcome page streams videos and takes pictures with user permission

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Hello World</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+<video id="video"></video>
+<button id="startbutton">Take photo</button>
+<canvas id="canvas"></canvas>
+<!-- <img src="http://placekitten.com/g/320/261" id="photo" alt="photo"> -->
