Small changes to authentication
User now must be authenticated to view contents of profile, and can only view own profile once authenticated.  Redirects home if not authenticated.  TODO: styling.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Hello World! </h1>
+<h1> Hello <%= @uniquename %> </h1>
 <table id = "login-table">
   <tr>
     <td style = "text-decoration: bold">Domain Name</td>
