--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -1,16 +1,44 @@
 
 body {
-    background: #d3d3d3;
-    height: 100%
+    background: white;
+    height: 100%;
   }
 
-#photo {
-    display: inline;
-    width: 500px
-  }
+#header {
+  font-size: 2em;
+  font-family: Helvetica;
+  text-align: center;
 
-/*#container {
-    overflow: hidden;
-    width: 880px;
-    margin: 20px auto
-}*/
+}
+
+#video {
+  margin-left: 225px;
+  border-radius: 15%;
+}
+
+#canvas {
+  display: inline;
+  border-radius: 15%;
+}
+
+.buttons {
+  text-align: center;
+}
+
+#start_button, #signup_button, #login_button {
+  margin: 5px;
+  text-align: center;
+  background-color:#ffffff;
+  -moz-border-radius:28px;
+  -webkit-border-radius:28px;
+  border-radius:28px;
+  border:1px solid #000000;
+  display:inline-block;
+  cursor:pointer;
+  color:#080808;
+  font-family:arial;
+  font-size:17px;
+  padding:16px 31px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #ffffff;
+}
