--- a/chrome-extension/styles.css
+++ b/chrome-extension/styles.css
@@ -1,12 +1,21 @@
-.test {
-  width: 500px;
-  height: 1000px;
+* {
+  margin: 0;
+  padding: 0;
 }
 #video {
   width:250px;
-  height:250px
+  height:187.5px;
 }
-#canvas {
-  width:250px;
-  height:250px
+#startbutton {
+  position: relative;
+  /*top: -20px;*/
+  /*left: 100px;*/
+  border: none;
+/* display: block; */
+ background: #136899;
+ height: 40px;
+ width: 100%;
+ color: #ffffff;
+ text-align: center;
+ /*border-radius: 5px;*/
 }
